# rtos

./: .gitignore  Cargo.lock__  Cargo.toml  Makefile  Xargo.toml  readme.md  x86_64-rtos.json
src/: interrupts.rs  main.rs  thread.rs  trace.rs  vga_buffer.rs
src/features/: mod.rs
src/features/clock/: mod.rs
src/features/keyboard/: mod.rs
src/features/shell/: mod.rs
src/features/trace/: mod.rs
src/interrupts/: gdt.rs  mod.rs
src/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/pic/: mod.rs
src/scheduler/: mod.rs
src/tasks/: mod.rs
